# strategos

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  LICENSE  LICENSE-MIT  MIGRATION_PLAN.md  README.md  SPEC_VERIFICATION_REPORT.md  TODO_ASTROMIND_INTEGRATION.md
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: main.rs
crates/engram-cli/src/commands/: extract.rs  info.rs  keygen.rs  list.rs  mod.rs  pack.rs  search.rs  sign.rs  verify.rs
crates/engram-cli/src/crypto/: keys.rs  mod.rs
crates/engram-cli/src/manifest/: builder.rs
crates/engram-cli/src/utils/: compression.rs
crates/engram-cli/tests/: cli.rs
lighthouse_data/302e302e302e303a30/: node_key
scripts/: build-release.ps1  build-release.sh  install.ps1  install.sh
src/: main.rs
src/commands/: cartridge.rs  datacard.rs  dataspool.rs  extract.rs  info.rs  mod.rs  pack.rs  query.rs  search.rs  shared.rs  sign.rs
src/formats/: cartridge.rs  datacard.rs  dataspool.rs  detection.rs  engram.rs  mod.rs  traits.rs
src/manifest/: mod.rs
src/utils/: compression.rs  mod.rs  paths.rs
