[workspace] # reference https://doc.rust-lang.org/cargo/reference/workspaces.html
    members = ["crates/engram-cli"]
    resolver = "2"

[workspace.package] # reference https://doc.rust-lang.org/cargo/reference/manifest.html
    version = "0.2.0"
    edition = "2024"
    authors = ["Engram Contributors"]
    license = "MIT"
    repository = "https://github.com/blackfall-labs/engram-cli"

#[workspace.dev-dependencies]
#    tempfile = "3.8"
#    assert_cmd = "2.0.14"
#    predicates = "3.1.0"

# reference https://doc.rust-lang.org/cargo/guide/dependencies.html
# reference https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[workspace.dependencies]

    # Shared dependencies
    anyhow = "1.0"
    clap = { version = "4.0", features = ["derive"] }
    thiserror = "1.0"
    serde = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"
    walkdir = "2.5"
    toml = "0.8"

    # Cryptography
    ed25519-dalek = { version = "2.1", features = ["rand_core"] }
    sha2 = "0.10"
    hex = "0.4"
    rand = "0.8"

    # Logging
    tracing = "0.1"
    tracing-subscriber = "0.1"

    # Database
    rusqlite = { version = "0.31", features = ["bundled"] }