[package]
name = "engram-cli"
version = "0.2.0"
edition = "2024"
authors = ["Engram Contributors"]
license = "MIT"
repository = "https://github.com/blackfall-labs/engram-cli"

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
# Engram core library (unified package)
engram-rs = "1.0.0"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.1"

# Database (for query command)
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.8"
