[package]
    name = "engram-cli"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true

[[bin]]
    name = "engram"
    path = "src/main.rs"

# only needed when developing the crate
[dev-dependencies]

# required in binary
[dependencies]
    assert_cmd = "2.0.14"
    predicates = "3.1.0"
    tempfile = "3.8"
    engram-core = { git = "https://github.com/Manifest-Humanity/engram-core", package = "engram-core" }
    engram-vfs  = { git = "https://github.com/Manifest-Humanity/engram-core", package = "engram-vfs" }
    clap.workspace = true
    anyhow.workspace = true
    thiserror.workspace = true
    crc32fast.workspace = true
    lz4_flex.workspace = true
    zstd.workspace = true
    serde.workspace = true
    serde_json.workspace = true
    walkdir.workspace = true
