[package]
    name = "engram-cli"
    version.workspace = true
    edition.workspace = true
    authors.workspace = true
    license.workspace = true

[[bin]]
    name = "engram"
    path = "src/main.rs"

[dependencies]
    # Engram core library (unified package)
    engram-rs = { git = "https://github.com/blackfall-labs/engram-rs", branch = "main" }

    # CLI & workspace deps
    clap.workspace = true
    anyhow.workspace = true
    thiserror.workspace = true
    serde.workspace = true
    serde_json.workspace = true
    toml.workspace = true
    walkdir.workspace = true

    # Cryptography
    ed25519-dalek.workspace = true
    sha2.workspace = true
    hex.workspace = true
    rand.workspace = true

    # Logging
    tracing.workspace = true
    tracing-subscriber.workspace = true

    # Database (for query command)
    rusqlite.workspace = true

[dev-dependencies]
    assert_cmd = "2.0.14"
    predicates = "3.1.0"
    tempfile = "3.8"
